pkglib_LTLIBRARIES = libresidential.la
libresidential_la_SOURCES = \
	house_a.cpp house_a.h \
	house_e.cpp house_e.h \
	solvers.cpp solvers.h \
	residential_enduse.cpp residential_enduse.h \
	clotheswasher.cpp clotheswasher.h \
	dishwasher.cpp dishwasher.h \
	lights.cpp lights.h \
	microwave.cpp  microwave.h \
	occupantload.cpp occupantload.h \
	plugload.cpp plugload.h \
	range.cpp range.h \
	refrigerator.cpp refrigerator.h \
	waterheater.cpp waterheater.h \
	dryer.cpp dryer.h \
	freezer.cpp freezer.h \
	evcharger.cpp evcharger.h \
	zipload.cpp zipload.h \
	init.cpp main.cpp residential.h
libresidential_la_LDFLAGS = -version-info 0:0:0

